<resources>
    <string name="app_name">Unit1t2</string>
    <string name="navTitle">ColorMyViews</string>
    <string name="boxOne">Box One</string>
    <string name="boxTwo">Box Two</string>
    <string name="boxThree">Box Three</string>
    <string name="boxFour">Box Four</string>
    <string name="boxFive">Box Five</string>
    <string name="buttonRed">RED</string>
    <string name="buttonYellow">YELLOW</string>
    <string name="buttonGreen">GREEN</string>
    <string name="stringGame">This is a game:</string>
    <string name="stringTap">Tap the screen and buttons.</string>
</resources>